[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boomi-piv"
version = "1.0.0"
description = "Boomi Integration Post-Installation Verification Test Suite"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[tool.pytest.ini_options]
testpaths = ["boomi_piv/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring live Boomi connection",
]

[tool.coverage.run]
source = ["boomi_piv"]
omit = ["boomi_piv/tests/*"]

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 80
